[package]
name = "profligate-front-rs"
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
profligate = "0.2.0"
wasm-bindgen = "0.2.71"
[lib]
crate-type = ["cdylib", "rlib"]